--- a/01firstScreenFlexbox.html
+++ b/01firstScreenFlexbox.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/01styleFirstScreenFlexbox.css">
   <title>App</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <input class="form-input" type="password" placeholder="password">
             <button class="btn" type="submit">Login</button>
             <p>Not registered? <a href="">Create an account</a></p>
-  	     </form>
+         </form>
       </article>
     </main>
 
