--- a/02ScreenPosition.html
+++ b/02ScreenPosition.html
@@ -5,18 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/01styleFirstScreenPosition.css">
+  <link rel="stylesheet" type="text/css" href="css/02styleScreenPosition.css">
   <title>App</title>
 </head>
 <body>
     <main>
       <article class="form-area">
         <img src="images/qlik.png">
+        <p class="login-text">Qlik Sense sample LDAP login page</p>
         <form action="" method="get" id="form-login">
             <input class="form-input" type="text" placeholder="username">
             <input class="form-input" type="password" placeholder="password">
             <button class="btn" type="submit">Login</button>
-            <p>Not registered? <a href="">Create an account</a></p>
+            <p>Need setup help? <a href="">QlikLogin - Github</a></p>
+            <p class="login-text">Welcome - Please log in above</p>
          </form>
       </article>
     </main>
