Adding selected item

--- a/05Screen.html
+++ b/05Screen.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/05styleScreen.css">
   <title>App</title>
@@ -26,7 +27,8 @@
         ><li><img src="images/cupcake1.png"><span>Cakes</span></li
         ><li><img src="images/drink1.png"><span>Drinks</span></li
       </ul>
-      <p class="logo">Dinner club</p>
+      <p class="logo">Dinner</p>
+      <p class="logo-name"><span class="first">____</span> CLUB <span class="second">____</span></p>
     </main>
 
 </body>
