Fixing 4th screen

--- a/04Screen.html
+++ b/04Screen.html
@@ -12,7 +12,7 @@
 <body>
     <main>
       <ul class="progress-bar">
-        <li><i class="fa fa-circle" aria-hidden="true"></i></li>
+        <li><div class="rounded"></div></li>
         <li></li>
         <li></li>
       </ul>
